--- a/MatrixGPA.Data/MatrixGPA.Data.csproj
+++ b/MatrixGPA.Data/MatrixGPA.Data.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MatrixGPA.Common\MatrixGPA.Common.csproj" />
+    <ProjectReference Include="..\MatrixGPA.Core\MatrixGPA.Core.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
